--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,3 +22,8 @@ jobs:
 
       - name: Test Reporter
         uses: dorny/test-reporter@v1.6.0
+        if: success() || failure()
+        with:
+          name: Test Report
+          path: build/test-results/test
+          fail-on-error: true
