--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,20 @@ javafx {
 
 test {
   useJUnitPlatform()
+  systemProperties['java.awt.headless'] = true
+  systemProperties['testfx.robot'] = 'glass'
+  systemProperties['testfx.headless'] = 'true'
 }
 
 dependencies {
   implementation 'com.google.code.gson:gson:2.10'
   testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
   testImplementation 'org.assertj:assertj-core:3.23.1'
+  testImplementation 'org.mockito:mockito-core:5.2.0'
+  testImplementation 'org.testfx:testfx-core:4.0.16-alpha'
+  testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+  testImplementation 'org.testfx:openjfx-monocle:jdk-11+26'
+  testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
 java {
